--- a/sass/_catagories.scss
+++ b/sass/_catagories.scss
@@ -1,9 +1,3 @@
-html{
-  background-color:white;
-}
-body{
-  margin-left:400px;
-}
 span{
   margin-left:400px;
 }
@@ -11,32 +5,33 @@ span{
   font-size: 26px;
   position:absolute;
   top:450px;
-  left:300px;
+  left:330px;
   z-index:1;
 }
 .note3{
   font-size: 26px;
   position:absolute;
   top:450px;
-  left:50px;
+  left:80px;
   z-index:1;
 }
 .note2{
   font-size: 26px;
   position:absolute;
   top:100px;
-  left:300px;
+  left:330px;
   z-index:1;
 }
 .note {
   font-size: 26px;
   position:absolute;
   top:100px;
-  left:50px;
+  left:80px;
   z-index:1;
   
 }
 .front {
+  
   position:relative;
   z-index:1;
 }
@@ -46,7 +41,7 @@ span{
   border-radius:150px;
   margin-top:-400px;
   margin-left:150px;
-  background-color:black;
+  background-color:white;
 }
 .style{
   width:200px;
@@ -55,12 +50,14 @@ span{
  
 }
 .one{
+  background-color:black;
   width:200px;
   height:300px;
   border:3px solid;
   
 }
 .two{
+  background-color:black;
   width:200px;
   height:300px;
   border:3px solid;
@@ -69,12 +66,14 @@ span{
 
 }
 .three{
+  background-color:black;
   width:200px;
   height:300px;
   border:3px solid;
   margin-top:40px;
 }
 .four{
+  background-color:black;
   width:200px;
   height:300px;
   border:3px solid;
@@ -82,10 +81,42 @@ span{
   margin-top:-305px;
 }
 .choose{
-  color:white;
+  color:black;
   font-size: 10px;
   position:absolute;
   top:335px;
   left:183px;
   z-index:1;
+  
+}
+.style{
+  opacity:0;
+}
+#nonote{
+ color:white;
+ font-family:Songti TC;
+}
+#words{
+ font-family:Songti TC;
+ margin-top:-7px;
+
+}
+#nonote:hover,#nonote:active{
+  opacity:0;  
+  transition:0s;
+ 
+}
+#break:hover ,#break:active {
+  opacity:1;
+ 
+}
+#official:hover,#official:active{
+  opacity:1;
+  
+}
+#simple:hover,#simple:active{
+  opacity:1;
+}
+#mixmatch:hover,#mixmatch:active{
+  opacity:1;
 }
