--- a/sass/_topic.scss
+++ b/sass/_topic.scss
@@ -1,88 +1,20 @@
-.line{
-  width:210px;
-  height:1.5px;
-  background-color:black;
-  margin-left:663px;
-  margin-top:200px;
-  position:absolute;
-}    
-.line2{
-  width:215px;
-  height:1.5px;
-  background-color:black;
-  position:absolute;
-  margin-left:350px;
-  margin-top:500px;
-}
-.midph{
-  width:400px;
-  margin-top:40px;
-  margin-left:400px;
-  position:absolute;
-  z-index:-1;
-  
-}
-.Catagory{
-  font-size:40px;
-  font-family:Songti TC;
-  position:absolute;
-  top:10px;
-  left:150px;
-
-  
-}
-.choose{
-  width:1280px;
-  height:150px;
-  background-color:black;
-  position:absolute;
-  top:700px;
-}
-.redcoat{
-  width:200px;
-  position:absolute;
-  margin-left:840px;
-  margin-top:50px;
-  z-index:-1;
-}
-.jeans{
-  width:150px;
-  position:absolute;
-  z-index:-1;
-  margin-left:250px;
-  margin-top:350px;
-}
-.blackhat{
-  position:absolute;
-  width:100px;
-  z-index:-1;
-  margin-left:280px;
-  margin-top:70px;
-}
-.line3{
-  position:absolute;
-  width:205px;
-  height:1.5px;
-  background-color:black;
-  margin-left:370px;
-  margin-top:100px;
-}
-.Comment{
-  position:absolute;
-  width:250px;
-  height:230px;
-  background-color:black;
-  margin-left:600px;
-  margin-top:300px;
-}
-.commentwords{
-  position:absolute;
-  color:white;
+.theme{
+  font-size:50px;
   font-family:songti tc;
-  font-size:12px;
-  margin-left:650px;
-  margin-top:350px;
-  width:150px;
- 
-  
+  position:absolute;
+  top:50px;
+  left:550px;
+}
+.sweater{
+  height:400px;
+  position:absolute;
+  top:150px;
+  left:450px;
+}
+.Sweater{
+  font-size:40px;
+  font-family:songti tc;
+  position:absolute;
+  top:580px;
+  left:550px;
 }
