--- a/sass/_topic.scss
+++ b/sass/_topic.scss
@@ -11,10 +11,10 @@
   top:150px;
   left:450px;
 }
-.Sweater{
+.Sweaterfont{
   font-size:40px;
   font-family:songti tc;
   position:absolute;
   top:580px;
   left:550px;
-}
+} 
